# libtw2

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  assumptions  common.c  common.h  common.py  compression.h  datafile.c  datafile.h  datafile.py  datafile_raw.c  datafile_raw.h  error.c  error.h  error_inlines.h  forall  gamemap.h  gamemap.py  generate_all  io.h  main.c  main.py  test.py  test_all
_old/: compression.c  datafile.c  datafile.md  (+7 more)
buffer/: Cargo.toml
buffer/src/: lib.rs  traits.rs
buffer/src/impls/: arrayvec.rs  buffer_ref.rs  cap_at.rs  slice.rs  slice_ref.rs  vec.rs
common/: Cargo.toml
common/benches/: cast.rs
common/generate/: cast.py
common/src/: buffer.rs  digest.rs  format_bytes.rs  io.rs  lib.rs  macros.rs  map_iter.rs  num.rs  pretty.rs  slice.rs  str.rs  takeable.rs  vec.rs
common/src/num/: cast.rs  mod.rs
datafile/: Cargo.toml
datafile/src/: a.rs.ice  bitmagic.rs  buffer.rs  common.rs  datafile_raw.rs  ext.rs  file.rs  format.rs  lib.rs  main.rs  raw.rs  raw_format.rs  writer.rs
demo/: Cargo.toml
demo/src/: bitmagic.rs  ddnet.rs  file.rs  format.rs  lib.rs  raw.rs  reader.rs  writer.rs
demo/src/ddnet/: reader.rs  writer.rs
downloader/: Cargo.toml
downloader/src/: main.rs
event-loop/: Cargo.toml
event-loop/src/: lib.rs
event_loop/: Cargo.toml
event_loop/src/: lib.rs
gamenet/: Cargo.toml  generate_all
gamenet/common/: Cargo.toml
gamenet/common/src/: debug.rs  error.rs  lib.rs  msg.rs  snap_obj.rs  traits.rs
gamenet/ddnet/: Cargo.toml
gamenet/ddnet-15.2.5/: Cargo.toml
gamenet/ddnet-15.2.5/src/: snap_obj.rs
gamenet/ddnet-15.2.5/src/msg/: system.rs
gamenet/ddnet/src/: enums.rs  lib.rs  snap_obj.rs
gamenet/ddnet/src/msg/: connless.rs  game.rs  mod.rs  system.rs
gamenet/generate/: datatypes.py  enums.py  fix_network.py  generate.py  loader.py  msg_connless.py  msg_game.py  msg_system.py  serialize.py  snap_obj.py
gamenet/generate/spec/: ddnet-15.2.5.json  ddnet-16.2.json  ddnet-16.7.2.json  ddnet-17.2.1.json  ddnet-19.1.json  ddnet-19.6.json  teeworlds-0.5.json  teeworlds-0.6.json  teeworlds-0.7-trunk.json  teeworlds-0.7.5.json
gamenet/snap/: Cargo.toml
gamenet/snap/src/: lib.rs
gamenet/spec/: Cargo.toml
gamenet/spec/src/: lib.rs
gamenet/src/: bytes.rs  enums.rs  error.rs  generate_msg.py  lib.rs  msg.rs  packer.rs  snap_obj.rs  test.rs
gamenet/src/msg/: connless.rs  game.rs  generate_system.py  mod.rs  system.rs
gamenet/teeworlds-0.5/: Cargo.toml
gamenet/teeworlds-0.5/src/: enums.rs  snap_obj.rs  traits.rs
gamenet/teeworlds-0.5/src/msg/: connless.rs  game.rs  mod.rs  system.rs
gamenet/teeworlds-0.6/: Cargo.toml
gamenet/teeworlds-0.6/src/: enums.rs  lib.rs  snap_obj.rs  traits.rs
gamenet/teeworlds-0.6/src/msg/: connless.rs  game.rs  mod.rs  system.rs
gamenet/teeworlds-0.7/: Cargo.toml
gamenet/teeworlds-0.7.5/: Cargo.toml
gamenet/teeworlds-0.7.5/src/: snap_obj.rs
gamenet/teeworlds-0.7.5/src/msg/: connless.rs  system.rs
gamenet/teeworlds-0.7/src/: enums.rs  lib.rs  snap_obj.rs  traits.rs
gamenet/teeworlds-0.7/src/msg/: connless.rs  game.rs  system.rs
hexdump/: Cargo.toml
hexdump/src/: imp.rs  lib.rs  main.rs
httphook/: Cargo.toml
httphook-ldpreload/: Cargo.toml  README.md
httphook-ldpreload/src/: leaky_vec.rs  lib.rs
httphook/src/: json.rs  lib.rs  main.rs  runtime.rs
huffman/: Cargo.toml
huffman/benches/: compression.rs
huffman/data/: frequencies  repr  test_cases
huffman/reference/: Cargo.toml
huffman/reference/src/: lib.rs
huffman/reference/sys/: Cargo.toml  build.rs
huffman/reference/sys/src/: api.cpp  api.h  lib.rs
huffman/reference/sys/src/include/base/: system.h
huffman/src/: lib.rs  main.rs
huffman/src/instances/: mod.rs  teeworlds.rs
huffman/tests/: correctness.rs
map/: Cargo.toml
map/macros/: Cargo.toml
map/macros/src/: lib.rs
map/src/: format.rs  generate.py  generate_format.py  int_macros.rs  internals.rs  lib.rs  main.rs  map.rs  reader.rs  structs.rs
net/: Cargo.toml
net/src/: connection.rs  connection7.rs  lib.rs  net.rs  protocol.rs  protocol7.rs  time.rs  warning.rs
net/src/collections/: mod.rs  peer_map.rs  peer_set.rs
packer/: Cargo.toml
packer/src/: lib.rs
register/: Cargo.toml
register/src/: ip_version.rs  lib.rs  protocols.rs
render-map/: Cargo.toml
render-map/src/: main.rs
render_map/: Cargo.toml
render_map/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
serverbrowse/: Cargo.toml  IDEAS  out
serverbrowse/src/: lib.rs  main.rs  protocol.rs
snapshot/: Cargo.toml
snapshot/benches/: build.rs
snapshot/reference/: Cargo.toml
snapshot/reference/src/: lib.rs  snap.rs
snapshot/reference/sys/: Cargo.toml  build.rs
snapshot/reference/sys/src/: api.cpp  api.h  lib.rs
snapshot/reference/sys/src/ddnet/: snapshot.cpp
snapshot/reference/sys/src/include/: compression.h  uuid_manager.h
snapshot/src/: format.rs  lib.rs  manager.rs  read_int.rs  receiver.rs  snap.rs  storage.rs
snapshot/tests/: correctness.rs
socket/: Cargo.toml
socket/src/: lib.rs  system.rs
stats-browser/: Cargo.toml
stats-browser/src/: addr.rs  entry.rs  lookup.rs  main.rs  socket.rs  stats_browser.rs  time.rs  tracker_fstd.rs  tracker_json.rs  vec_map.rs  work_queue.rs
stats_browser/: Cargo.toml  WISHLIST
stats_browser/src/: addr.rs  base64.rs  config.rs  entry.rs  hashmap_ext.rs  lib.rs  lookup.rs  main.rs  socket.rs  stats_browser.rs  time.rs  tracker_fstd.rs  tracker_json.rs  vec_map.rs  work_queue.rs
teehistorian/: Cargo.toml
teehistorian/src/: bitmagic.rs  file.rs  lib.rs  raw.rs
teehistorian/src/format/: item.rs  mod.rs
tools/: Cargo.toml
tools/src/: client.rs  lib.rs  map_stats.rs  unhexdump.rs  warn_stderr.rs  warn_stdout.rs
wireshark-dissector/: Cargo.toml  README.md  build.rs
wireshark-dissector/src/: format.rs  intern.rs  lib.rs  spec.rs  tw.rs  tw7.rs
wireshark-dissector/sys/: Cargo.toml  bindgen.h  extract_def_file.py  fix.py  generate
wireshark-dissector/sys/src/: lib.rs  libwireshark.def  libwsutil.def
world/: Cargo.toml
world/src/: lib.rs
(+81 files in other folders)
