[workspace]
resolver = "2"
members = [
    "common",
    "datafile",
    "demo",
    "downloader",
    "event-loop",
    "gamenet/common",
    "gamenet/ddnet",
    "gamenet/snap",
    "gamenet/spec",
    "gamenet/teeworlds-0.5",
    "gamenet/teeworlds-0.6",
    "gamenet/teeworlds-0.7",
    "httphook",
    "httphook-ldpreload",
    "huffman",
    "huffman/reference",
    "huffman/reference/sys",
    "logger",
    "map",
    "net",
    "packer",
    "register",
    "render-map",
    "server",
    "serverbrowse",
    "snapshot",
    "socket",
    "stats-browser",
    "teehistorian",
    "tools",
    "wireshark-dissector",
    "world",
    "zlib-minimal",
]
