[workspace]
resolver = "2"
members = [
    "buffer",
    "common",
    "datafile",
    "demo",
    "downloader",
    "event-loop",
    "gamenet/common",
    "gamenet/ddnet",
    "gamenet/snap",
    "gamenet/spec",
    "gamenet/teeworlds-0.5",
    "gamenet/teeworlds-0.6",
    "gamenet/teeworlds-0.7",
    "httphook",
    "httphook-ldpreload",
    "huffman",
    "huffman/reference",
    "huffman/reference/sys",
    "logger",
    "map",
    "net",
    "packer",
    "register",
    "polyfill-1-63",
    "render-map",
    "server",
    "serverbrowse",
    "snapshot",
    "snapshot/reference",
    "snapshot/reference/sys",
    "socket",
    "stats-browser",
    "teehistorian",
    "tools",
    "warn",
    "wireshark-dissector",
    "world",
    "zlib-minimal",
]
