[package]
name = "pre-rfc3243-libtw2-buffer"
description = "Safe, write-only, generics-free buffer abstraction"
version = "0.2.0"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[lib]
name = "libtw2_buffer"

[dependencies]
arrayvec = "0.5.2"
mac = "0.0.2"
