[package]
name = "common"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
arrayvec = "0.5.2"
file_offset = "0.1.0"
num-traits = "0.1.32"
ref_slice = ">=0.1.0,<2.0"
serde = { version = "1.0.23", optional = true }
unreachable = "1.0.0"

[dev-dependencies]
bencher = "0.1.5"
quickcheck = "0.4.1"

[[bench]]
name = "cast"
harness = false
