[package]
name = "libtw2-datafile"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
hexdump = "0.1.1"
itertools = ">=0.3.0,<0.5.0"
libtw2-common = { path = "../common/", features = ["file_offset"] }
libtw2-logger = { path = "../logger/" }
libtw2-zlib = { package = "libtw2-zlib-minimal", path = "../zlib-minimal/" }
log = "0.3.0"
