[package]
name = "pre-rfc3243-libtw2-demo"
description = "pre-rfc3243-libtw2-demo"
version = "0.1.0"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "libtw2_demo"

[dependencies]
arrayvec = "0.5.2"
binrw = "0.11.1"
buffer = "0.1.9"
pre-rfc3243-libtw2-common = { version = "0.1", path = "../common/" }
pre-rfc3243-libtw2-gamenet-common = { version = "0.1.1", path = "../gamenet/common/" }
pre-rfc3243-libtw2-huffman = { version = "0.1", path = "../huffman/" }
pre-rfc3243-libtw2-packer = { version = "0.1", path = "../packer/" }
pre-rfc3243-libtw2-snapshot = { version = "0.1", path = "../snapshot/" }
thiserror = "1.0.0"
uuid = "0.8.1"
warn = "0.2.1"
