[package]
name = "libtw2-demo"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
arrayvec = "0.5.2"
binrw = "0.11.1"
libtw2-buffer = { path = "../buffer/" }
libtw2-common = { path = "../common/" }
libtw2-gamenet-common = { path = "../gamenet/common/" }
libtw2-huffman = { path = "../huffman/" }
libtw2-packer = { path = "../packer/" }
libtw2-snapshot = { path = "../snapshot/" }
libtw2-warn = { path = "../warn/" }
thiserror = "1.0.0"
