[package]
name = "pre-rfc3243-libtw2-demo"
description = "pre-rfc3243-libtw2-demo"
version = "0.2.0"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "libtw2_demo"

[dependencies]
arrayvec = "0.5.2"
binrw = "0.11.1"
pre-rfc3243-libtw2-buffer = { version = "0.2", path = "../buffer/" }
pre-rfc3243-libtw2-common = { version = "0.2", path = "../common/" }
pre-rfc3243-libtw2-gamenet-common = { version = "0.2", path = "../gamenet/common/" }
pre-rfc3243-libtw2-huffman = { version = "0.2", path = "../huffman/" }
pre-rfc3243-libtw2-packer = { version = "0.2", path = "../packer/" }
pre-rfc3243-libtw2-snapshot = { version = "0.2", path = "../snapshot/" }
pre-rfc3243-libtw2-warn = { version = "0.2", path = "../warn/" }
thiserror = "1.0.0"
