[package]
name = "downloader"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
arrayvec = "0.5.2"
clap = "2.31.2"
common = { path = "../common/" }
event_loop = { path = "../event_loop/" }
gamenet_teeworlds_0_6 = { path = "../gamenet/teeworlds-0.6/" }
hexdump = "0.1.1"
itertools = ">=0.3.0,<0.5.0"
log = "0.3.1"
logger = { path = "../logger/" }
packer = { path = "../packer/" }
rand = "0.3.10"
snapshot = { path = "../snapshot/" }
tempfile = "2.0.0"
warn = ">=0.1.1,<0.3.0"
