[package]
name = "pre-rfc3243-libtw2-event-loop"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[lib]
name = "libtw2_event_loop"

[dependencies]
arrayvec = "0.5.2"
hexdump = "0.1.1"
itertools = ">=0.3.0,<0.5.0"
pre-rfc3243-libtw2-common = { path = "../common/" }
pre-rfc3243-libtw2-logger = { path = "../logger/" }
pre-rfc3243-libtw2-net = { path = "../net/" }
pre-rfc3243-libtw2-socket = { path = "../socket/" }
pre-rfc3243-libtw2-warn = { path = "../warn/" }
log = "0.3.1"
