[package]
name = "event_loop"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
arrayvec = "0.5.2"
common = { path = "../common/" }
hexdump = "0.1.1"
itertools = ">=0.3.0,<0.5.0"
log = "0.3.1"
logger = { path = "../logger/" }
net = { path = "../net/" }
socket = { path = "../socket/" }
warn = ">=0.1.1,<0.3.0"
