[package]
name = "libtw2-httphook"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
env_logger = "0.3.0"
envy = "0.4.2"
libtw2-register = { path = "../register/" }
libtw2-serverbrowse = { path = "../serverbrowse/" }
log = "0.3.1"
reqwest = "0.11.27"
serde = "1.0.23"
serde_derive = "1.0.27"
serde_json = "1.0.7"
tokio = { version = "1.38.1", features = ["net", "rt", "time"] }
