[package]
name = "libtw2-net"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
arrayvec = "0.5.2"
libtw2-buffer = { path = "../buffer/" }
libtw2-common = { path = "../common/" }
libtw2-huffman = { path = "../huffman/" }
libtw2-warn = { path = "../warn/" }
linear-map = "1.0.0"
optional = "0.0.12"
void = ">=0.0.4,<2.0.0"
zerocopy = "0.7.32"
zerocopy-derive = "0.7.32"

[dev-dependencies]
hexdump = "0.1.1"
itertools = ">=0.3.0,<0.5.0"
quickcheck = "0.4.1"
