[package]
name = "pre-rfc3243-libtw2-packer"
description = "pre-rfc3243-libtw2-packer"
version = "0.1.0"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "libtw2_packer"

[dependencies]
arrayvec = "0.5.2"
buffer = "0.1.9"
pre-rfc3243-libtw2-common = { version = "0.1", path = "../common/" }
uuid = { version = "0.8.1", optional = true }
warn = ">=0.1.1,<0.3.0"

[dev-dependencies]
hexdump = "0.1.1"
quickcheck = "0.4.1"
