[package]
name = "libtw2-packer"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
arrayvec = "0.5.2"
buffer = "0.1.9"
libtw2-common = { path = "../common/" }
uuid = { version = ">=0.8.1,<2.0.0", optional = true }
warn = ">=0.1.1,<0.3.0"

[dev-dependencies]
hexdump = "0.1.1"
quickcheck = "0.4.1"
