[package]
name = "pre-rfc3243-libtw2-packer"
description = "pre-rfc3243-libtw2-packer"
version = "0.1.0"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[lib]
name = "libtw2_packer"

[dependencies]
arrayvec = "0.5.2"
pre-rfc3243-libtw2-buffer = { version = "0.1", path = "../buffer/" }
pre-rfc3243-libtw2-common = { version = "0.1", path = "../common/" }
pre-rfc3243-libtw2-warn = { version = "0.1", path = "../warn/" }
uuid = { version = ">=0.8.1,<2.0.0", optional = true }

[dev-dependencies]
quickcheck = "0.4.1"
