[package]
name = "libtw2-render-map"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
clap = "2.31.2"
image = { version = "0.24.0", features = ["png", "rayon"], default-features = false }
libtw2-common = { path = "../common/" }
libtw2-datafile = { path = "../datafile/" }
libtw2-logger = { path = "../logger/" }
libtw2-map = { path = "../map/" }
ndarray = "0.9.1"
num-traits = "0.1.32"
