[package]
name = "render_map"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
common = { path = "../common/" }
datafile = { path = "../datafile/" }
image = "0.10.1"
logger = { path = "../logger/" }
map = { path = "../map/" }
ndarray = "0.9.1"
num-traits = "0.1.32"
