[package]
name = "server"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
arrayvec = "0.5.2"
common = { path = "../common/" }
datafile = { path = "../datafile/" }
event_loop = { path = "../event_loop/" }
gamenet_teeworlds_0_6 = { path = "../gamenet/teeworlds-0.6/" }
hexdump = "0.1.1"
itertools = ">=0.3.0,<0.5.0"
log = "0.3.1"
logger = { path = "../logger/" }
map = { path = "../map/" }
matches = "0.1.2"
ndarray = "0.9.1"
packer = { path = "../packer/" }
snapshot = { path = "../snapshot/" }
socket = { path = "../socket/" }
warn = ">=0.1.1,<0.3.0"
world = { path = "../world/" }
