[package]
name = "pre-rfc3243-libtw2-server"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
arrayvec = "0.5.2"
hexdump = "0.1.1"
itertools = ">=0.3.0,<0.5.0"
pre-rfc3243-libtw2-common = { path = "../common/" }
pre-rfc3243-libtw2-datafile = { path = "../datafile/" }
pre-rfc3243-libtw2-event-loop = { path = "../event-loop/" }
libtw2-gamenet = { package = "pre-rfc3243-libtw2-gamenet-teeworlds-0-6", path = "../gamenet/teeworlds-0.6/" }
pre-rfc3243-libtw2-logger = { path = "../logger/" }
pre-rfc3243-libtw2-map = { path = "../map/" }
pre-rfc3243-libtw2-packer = { path = "../packer/" }
pre-rfc3243-libtw2-snapshot = { path = "../snapshot/" }
pre-rfc3243-libtw2-socket = { path = "../socket/" }
pre-rfc3243-libtw2-world = { path = "../world/" }
log = "0.3.1"
ndarray = "0.9.1"
warn = ">=0.1.1,<0.3.0"
