[package]
name = "serverbrowse"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
arrayvec = "0.5.2"
common = { path = "../common/" }
log = "0.3.0"
logger = { path = "../logger/" }
packer = { path = "../packer/" }
time = "0.1.25"
warn = "0.2.2"
