[package]
name = "libtw2-snapshot"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
libtw2-buffer = { path = "../buffer/" }
libtw2-common = { path = "../common/" }
libtw2-gamenet-common = { path = "../gamenet/common/" }
libtw2-gamenet-snap = { path = "../gamenet/snap/" }
libtw2-packer = { path = "../packer/" }
libtw2-warn = { path = "../warn/" }
rustc-hash = "1.1.0"

uuid = ">=0.8.1,<2.0.0"
vec_map = "0.8.0"

[dev-dependencies]
bencher = "0.1.5"
itertools = ">=0.3.0,<0.5.0"
libtw2-gamenet = { package = "libtw2-gamenet-teeworlds-0-6", path = "../gamenet/teeworlds-0.6/" }
libtw2-snapshot-reference = { path = "reference" }
rand = "0.8.3"
rand_chacha = "0.3"

[[bench]]
name = "build"
harness = false
