[package]
name = "socket"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]

[dependencies]
buffer = "0.1.5"
common = { path = "../common/" }
hexdump = "0.1.0"
itertools = ">=0.3.0,<0.5.0"
libc = "0.2.7"
log = "0.3.1"
mio = "0.5.0"
net = { path = "../net/" }
num = "0.1.27"
rand = "0.3.10"
