[package]
name = "socket"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
buffer = "0.1.9"
common = { path = "../common/" }
hexdump = "0.1.1"
itertools = ">=0.3.0,<0.5.0"
libc = "0.2.16"
log = "0.3.1"
mio = "0.6.6"
net = { path = "../net/" }
net2 = "0.2.0"
rand = "0.8.3"
