[package]
name = "libtw2-stats-browser"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[[bin]]
name = "libtw2-stats-browser"
doc = false

[dependencies]
arrayvec = { version = "0.5.2", features = ["serde"] }
base64 = "0.13.0"
clap = "2.23.1"
csv = "1.1.6"
ipnet = { version = "2.3.0", features = ["serde"] }
libtw2-common = { path = "../common/" }
libtw2-logger = { path = "../logger/" }
libtw2-serverbrowse = { path = "../serverbrowse/" }
log = "0.3.1"
mio = "0.6.6"
rand = "0.8.3"
serde = "1.0.23"
serde_derive = "1.0.27"
serde_json = "1.0.7"
time = "0.1.34"
uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }
zerocopy = "0.7.32"
