[package]
name = "stats_browser"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"

[[bin]]
name = "stats_browser"
doc = false

[dependencies]
common = { path = "../common/" }
log = "0.3.1"
logger = { path = "../logger/" }
mio = "0.5.1"
rustc-serialize = "0.3.18"
serverbrowse = { path = "../serverbrowse/" }
time = { version = "0.1.34", features = ["rustc-serialize"] }
