[package]
name = "stats_browser"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"

[[bin]]
name = "stats_browser"
doc = false

[dependencies]
clap = "2.23.1"
common = { path = "../common/" }
log = "0.3.1"
logger = { path = "../logger/" }
mio = "0.5.1"
rustc-serialize = "0.3.20"
serverbrowse = { path = "../serverbrowse/" }
time = "0.1.34"
