[package]
name = "libtw2-teehistorian"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
arrayvec = { version = "0.5.2", features = ["serde"] }
buffer = "0.1.9"
chrono = "0.4.0"
itertools = "0.7.4"
libtw2-common = { path = "../common/", features = ["serde"] }
libtw2-packer = { path = "../packer/", features = ["uuid"] }
serde = "1.0.23"
serde_derive = "1.0.7"
serde_json = "1.0.7"
uuid = { version = "0.8.1", features = ["serde"] }
vec_map = "0.8.0"
warn = "0.2.2"

[dev-dependencies]
uuid = { version = "0.8.1", features = ["v3"] }
