[package]
name = "libtw2-teehistorian"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
arrayvec = { version = "0.5.2", features = ["serde"] }
chrono = "0.4.0"
itertools = "0.7.4"
libtw2-buffer = { path = "../buffer/" }
libtw2-common = { path = "../common/", features = ["serde"] }
libtw2-packer = { path = "../packer/", features = ["uuid"] }
libtw2-warn = { path = "../warn/" }
serde = "1.0.23"
serde_derive = "1.0.7"
serde_json = "1.0.7"
uuid = { version = ">=0.8.1,<2.0.0", features = ["serde"] }
vec_map = "0.8.0"

[dev-dependencies]
uuid = { version = ">=0.8.1,<2.0.0", features = ["v3"] }
