[package]
name = "libtw2-tools"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
arrayvec = "0.5.2"
buffer = "0.1.9"
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.23.1"
csv = "1.1.6"
hexdump = "0.1.1"
itertools = "0.7.4"
libtw2-common = { path = "../common/" }
libtw2-datafile = { path = "../datafile/" }
libtw2-demo = { path = "../demo/" }
libtw2-gamenet-ddnet = { path = "../gamenet/ddnet/" }
libtw2-gamenet-spec = { path = "../gamenet/spec/" }
libtw2-gamenet-teeworlds-0-6 = { path = "../gamenet/teeworlds-0.6/" }
libtw2-gamenet-teeworlds-0-7 = { path = "../gamenet/teeworlds-0.7/" }
libtw2-logger = { path = "../logger/" }
libtw2-map = { path = "../map/" }
libtw2-net = { path = "../net/" }
libtw2-packer = { path = "../packer/", features = ["uuid"] }
libtw2-serverbrowse = { path = "../serverbrowse/" }
libtw2-snapshot = { path = "../snapshot/" }
libtw2-teehistorian = { path = "../teehistorian/" }
libtw2-world = { path = "../world/" }
log = "0.3.1"
rmp = "0.8.5"
serde = "1.0.23"
serde_derive = "1.0.27"
serde_json = "1.0.7"
uuid = { version = ">=0.8.1,<2.0.0", features = ["serde"] }
vec_map = "0.8.0"
void = "1.0.2"
walkdir = "2.0.1"
warn = "0.2.2"
